example/secondfile/objects/Mileage_Charge__c.object
<CustomObject>
    <description>Lookup Table of mileage charges based on speed, payment term, account tier, Vasa Region and mileage charge</description>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <description>Account Tier i.e. silver, gold or platinum</description>
        <label>Account Tier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lec_Name__c</fullName>
        <label>Lec Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Charge_Per_Mile__c</fullName>
        <description>Charge per mile above the 50 mile limit</description>
        <label>Mileage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <description>Payment Term</description>
        <label>Payment Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <description>The speed of the connection</description>
        <label>Speed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VASA_Region__c</fullName>
        <description>Region of the connection as calculated by the system</description>
        <label>VASA Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Mileage Charge</label>
    <listViews>
        <fullName>All_new</fullName>
        <columns>NAME</columns>
        <columns>Account_Tier__c</columns>
        <columns>Lec_Name__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Mileage_Charge_Per_Mile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Mileage Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mileage Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>